<resources>
    <string name="app_name">VetClinic</string>
    <string name="title_activity_start_page">StartPageActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_clinic_details">Clinic details</string>
    <string name="title_add_new_pet">Add or edit pet</string>
    <string name="title_add_new_clinic">Add new clinic</string>

    <string name="all_vets_fragment">All vets</string>
    <string name="map_fragment">Map</string>
    <string name="my_clinics_fragment">My clinics</string>
    <string name="my_favorites_fragment">My favorite clinics</string>
    <string name="my_pets_fragment">My pets</string>
    <string name="settings_fragment">Settings</string>
    <string name="symptom_checker_fragment">Symptom checker</string>

    <!-- Login & Sign up-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="not_a_member">Not a member yet?</string>
    <string name="already_a_member">Already a member?</string>
    <string name="are_you_a_doctor">Are you a doctor?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_email">This is not a valid email</string>
    <string name="empty_password">Password cannot be empty</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="fill_form_error">Please fill the form</string>

    <!-- Profile -->
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="phone">Phone</string>
    <string name="street">Street and house</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip code</string>
    <string name="specialities">Specialities</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="pets_list">My pets</string>
    <string name="my_clinics_list">My clinics</string>
    <string name="favorites">My favorites</string>
    <string name="settings">Settings</string>
    <string name="map">Map</string>
    <string name="symptom_checker">Symptom checker</string>
    <string name="logout">Log out</string>

    <!-- Map -->
    <string name="map_autocomplete_city_hint">City</string>
    <string name="map_show_only_open_clinics">Only show open clinics</string>

    <!-- Settings -->
    <string name="map_perimeter_settings_item_title">Map perimeter</string>
    <string name="map_perimeter_settings_item_description_1">Current value:&#160;</string>
    <string name="map_perimeter_settings_item_description_2">&#160;km.</string>

    <string name="map_perimeter_dialog_title">Map perimeter</string>
    <string name="map_perimeter_dialog_description">Set the perimeter for map search.</string>
    <string name="map_perimeter_dialog_positive_button">OK</string>
    <string name="map_perimeter_dialog_negative_button">Cancel</string>

    <string name="delete_all_favs_settings_item_title">Delete favorites</string>
    <string name="delete_all_favs_settings_item_description">Delete all favorite clinics for this device.</string>

    <string name="delete_all_favs_dialog_title">Delete favorites</string>
    <string name="delete_all_favs_dialog_description">Are you sure you want to delete all your favorite clinics?</string>
    <string name="delete_all_favs_dialog_positive_button">Delete all</string>
    <string name="delete_all_favs_dialog_negative_button">Cancel</string>

    <!-- Add new pet -->
    <string name="dont_save_pet_dialog_title">Are you sure?</string>
    <string name="dont_save_pet_dialog_description">All your changes will be lost.</string>
    <string name="dont_save_pet_dialog_positive_button">Keep editing</string>
    <string name="dont_save_pet_dialog_negative_button">Go back</string>

    <string name="fields_not_filled_dialog_title">Can\'t save</string>
    <string name="fields_not_filled_dialog_description">Plase fill all fields.</string>
    <string name="fields_not_filled_dialog_positive_button">OK</string>
    <string name="fields_not_filled_dialog_negative_button">Don\'t save</string>

    <!-- Pet list -->

    <string name="no_pets">You have no pets yet</string>
    <string name="pet_years_old">%1$d years old</string>
    <string name="pet_kg">%.2f kg</string>

    <!-- Clinic list -->

    <string name="no_clinics">You have no clinics yet</string>

    <!-- Favorites -->

    <string name="no_favorites">You have no favorites yet</string>

    <!-- Symptom checker -->

    <string name="symptom_checker_no_symptoms">All good!</string>
    <string name="symptom_checker_no_symptoms_desc">Please keep in mind, this test only checks for common symptoms. If you see unusual changes in your pet\'s behaviour, please seek a professional vet.</string>

    <string name="vet_works_here_add_button">I work here</string>
    <string name="vet_works_here_remove_button">I don\'t work here anymore</string>

    <!-- Clinic details -->

    <string name="no_name_set_dialog_message">Please set your first name and last name in your profile before adding yourself to a clinic.</string>
    <string name="no_name_set_dialog_positive_button">OK</string>

    <!-- Add new clinic -->

    <string name="add_new_clinic_waring">Please note, that adding a new clinic will automatically add you to its list of vets.</string>

</resources>
